//
//  AccessibilityIdentifiers.swift
//  MovieQuiz
//
//  Created by Дмитрий Шиляев on 27.10.2025.
//

import Foundation

struct AccessibilityIdentifiers {
    static let gameResultsAlert = "Game results"
    static let networkErrorAlert = "Network Error"
}
